--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,13 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+pylint = "*"
 
 [packages]
 requests = "*"
 python-dotenv = "*"
+apscheduler = "*"
+ansicolors = "*"
 
 [requires]
 python_version = "3.6"
