Calculation of results based on expression

--- a/Pipfile
+++ b/Pipfile
@@ -5,6 +5,7 @@ verify_ssl = true
 
 [dev-packages]
 pylint = "*"
+pytest = "*"
 
 [packages]
 requests = "*"
@@ -12,6 +13,8 @@ python-dotenv = "*"
 apscheduler = "*"
 ansicolors = "*"
 easysnmp = "*"
+mathjspy = "*"
+numpy = "*"
 
 [requires]
 python_version = "3.6"
