--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,12 +10,12 @@ services:
 
   snmpcollector:
     # If you wish to load an explicit version, change the next line. For example:
-    #   image: grafolean/grafolean-worker-snmp:v1.0.0
-    image: grafolean/grafolean-worker-snmp
+    #   image: grafolean/grafolean-collector-snmp:v1.0.0
+    image: grafolean/grafolean-collector-snmp
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: grafolean-worker-snmp
+    container_name: grafolean-collector-snmp
     environment:
       # Backend url must be set to the address of the Grafolean backend, for example this uses Grafolean hosted service:
       # - BACKEND_URL=https://grafolean.com/api
