Use redis for saving previous counter values

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -32,3 +32,12 @@ services:
     # on the same host, '127.0.0.1' translates to container, not host - this directive changes network mode
     # so that Docker networking is bypassed.
     network_mode: "host"
+
+  redis:
+    image: redis:5-alpine
+    container_name: grafolean-collector-snmp-redis
+    ports:
+      - "127.0.0.1:6379:6379"
+    # We advise not to use `network_mode: "host"` in production, because it would expose Redis to host network
+    # (even if access is limited to 127.0.0.1).
+    network_mode: "host"
