--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ ansicolors = "*"
 easysnmp = {editable = true,git = "http://github.com/grafolean/easysnmp"}
 mathjspy = "*"
 numpy = "*"
+redis = "*"
 
 [requires]
 python_version = "3.6"
