--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,8 +18,12 @@ pytest:
     - apt-get install --no-install-recommends -q -y libsnmp-dev build-essential git
     - pip install --no-cache-dir pipenv
     - pipenv install --dev
+    - docker run -d --net=host -p 127.0.0.1:6379:6379 --name redis redis:5-alpine
   script:
+    - export REDIS_HOST="127.0.0.1"
     - pipenv run pytest -x test_snmpcollector.py
+  after_script:
+    - docker rm -f redis
 
 deploy to docker hub:
   stage: deploy
