Add missing changes to Pipenv and lock file (install python-slugify)

--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ easysnmp = {editable = true,git = "http://github.com/grafolean/easysnmp"}
 mathjspy = "*"
 numpy = "*"
 redis = "*"
+python-slugify = "*"
 
 [requires]
 python_version = "3.6"
