--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,19 @@ services:
       - REDIS_HOST=redis
     restart: always
 
+
   redis:
     image: redis:5-alpine
     container_name: grafolean-collector-snmp-redis
+    restart: always
+
+
+  autoheal:
+    # This container automatically restarts any container that fails its health check. Not a bullet-proof solution, but better than nothing.
+    image: willfarrell/autoheal
+    container_name: autoheal-snmp
+    environment:
+      - AUTOHEAL_CONTAINER_LABEL=all
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
     restart: always
