--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -47,6 +47,7 @@ services:
     container_name: autoheal-snmp
     environment:
       - AUTOHEAL_CONTAINER_LABEL=all
+      - AUTOHEAL_INTERVAL=5   # check every 5 seconds - this must be lower than the period of Docker container HEALTHCHECK we are monitoring
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     restart: always
