--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2.1'
 services:
 
   #
-  # Welcome to Grafolean SNMP Collector!
+  # Welcome to Grafolean SNMP bot!
   #
   # This file should be modified to suit your running environment. Please check the comments and change
   # the settings appropriately.
@@ -10,16 +10,16 @@ services:
 
   snmpbot:
     # If you wish to load an explicit version, change the next line. For example:
-    #   image: grafolean/grafolean-collector-snmp:v1.0.0
-    image: grafolean/grafolean-collector-snmp
-    container_name: grafolean-collector-snmp
+    #   image: grafolean/grafolean-snmp-bot:v1.0.0
+    image: grafolean/grafolean-snmp-bot
+    container_name: grafolean-snmp-bot
     environment:
       # Backend url must be set to the address of the Grafolean backend, for example this uses Grafolean hosted service:
       # - BACKEND_URL=https://grafolean.com/api
       # IMPORTANT: '127.0.0.1' and 'localhost' are _never_ correct addresses for Grafolean backend, because they translate
       # to container, not host.
       - BACKEND_URL=${BACKEND_URL}
-      # To use SNMP Collector, a bot with the protocol "snmp" must be added via user interface, then the token needs to be copied here:
+      # To use SNMP bot, a bot with the protocol "snmp" must be added via user interface, then the token needs to be copied here:
       - BOT_TOKEN=${BOT_TOKEN}
       # Interval between fetching information about jobs:
       - JOBS_REFRESH_INTERVAL=${JOBS_REFRESH_INTERVAL:-60}
@@ -31,7 +31,7 @@ services:
 
   redis:
     image: redis:5-alpine
-    container_name: grafolean-collector-snmp-redis
+    container_name: grafolean-snmp-bot-redis
     restart: always
     networks:
       - grafolean
@@ -40,7 +40,7 @@ services:
   autoheal:
     # This container automatically restarts any container that fails its health check. Not a bullet-proof solution, but better than nothing.
     image: willfarrell/autoheal
-    container_name: autoheal-snmp
+    container_name: grafolean-snmp-bot-autoheal
     environment:
       - AUTOHEAL_CONTAINER_LABEL=all
     volumes:
