Replace Redis with PostgreSQL (usually already installed)

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 BACKEND_URL=https://grafolean.com/api
 BOT_TOKEN=
 JOBS_REFRESH_INTERVAL=120
+DB_DIR=
+DB_HOST=
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
