--- a/Pipfile
+++ b/Pipfile
@@ -15,9 +15,9 @@ ansicolors = "*"
 easysnmp = {editable = true,git = "http://github.com/grafolean/easysnmp"}
 mathjspy = "*"
 numpy = "*"
-redis = "*"
 python-slugify = "*"
 grafoleancollector = "*"
+psycopg2-binary = "*"
 
 [requires]
 python_version = "3.6"
