--- a/.github/workflows/on_release.yml
+++ b/.github/workflows/on_release.yml
@@ -13,8 +13,18 @@ jobs:
     - name: Checkout source code
       uses: actions/checkout@v1
 
+    - name: Set up QEMU for more platforms
+      uses: docker/setup-qemu-action@v1
+      with:
+        platforms: amd64,arm
 
-    - name: Deploy to Docker Hub
+    - name: Set docker build as alias to buildx (multiarch build)
+      uses: docker/setup-buildx-action@v1
+      id: buildx
+      # with:
+      #   install: true
+
+    - name: Deploy to Docker Hub - ARMv7
       if: success() && startsWith(github.ref, 'refs/tags/v')
       env:
         GITHUB_REF_TAG: ${{ github.ref }}
@@ -22,14 +32,15 @@ jobs:
         DOCKER_IMAGE: grafolean/grafolean-snmp-bot
         DOCKER_USER: grafolean
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        BUILD_PLATFORMS: linux/arm/v7
       run: |
+        echo "Available plaftorms: ${{ steps.buildx.outputs.platforms }}"
+        echo "Building for plaftorms: $BUILD_PLATFORMS"
         export VERSION=${GITHUB_REF_TAG:10:50}
         echo "Version is $VERSION"
         export LAST_KNOWN_VERSION=`git tag -l --sort=-version:refname "v*.*.*" | grep -v rc | head -n 1 | tr -d '[:space:]'`
         echo "Last known version is $LAST_KNOWN_VERSION"
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD $DOCKER_REGISTRY
-        docker build -t "docker.io/$DOCKER_IMAGE:$VERSION" -t "docker.io/$DOCKER_IMAGE:latest" --build-arg VERSION=$VERSION --build-arg VCS_REF=$GITHUB_SHA --build-arg BUILD_DATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ') .
-        [ "$LAST_KNOWN_VERSION" == "$VERSION" ] && docker tag "docker.io/$DOCKER_IMAGE:$VERSION" "docker.io/$DOCKER_IMAGE:latest" || echo "NOT MARKING AS LATEST!"
-        docker images
-        docker push "docker.io/$DOCKER_IMAGE:$VERSION"
-        [ "$LAST_KNOWN_VERSION" == "$VERSION" ] && docker push "docker.io/$DOCKER_IMAGE:latest" || echo "NOT LATEST!"
+        [ "$LAST_KNOWN_VERSION" == "$VERSION" ] && echo "MARKING AS LATEST!" || echo "NOT MARKING AS LATEST!"
+        [ "$LAST_KNOWN_VERSION" == "$VERSION" ] && docker buildx build --push --platform "$BUILD_PLATFORMS" -t "docker.io/$DOCKER_IMAGE:$VERSION" -t "docker.io/$DOCKER_IMAGE:latest" --build-arg VERSION=$VERSION --build-arg VCS_REF=$GITHUB_SHA --build-arg BUILD_DATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ') .
+        [ "$LAST_KNOWN_VERSION" != "$VERSION" ] && docker buildx build --push --platform "$BUILD_PLATFORMS" -t "docker.io/$DOCKER_IMAGE:$VERSION" --build-arg VERSION=$VERSION --build-arg VCS_REF=$GITHUB_SHA --build-arg BUILD_DATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ') .
