--- a/.github/workflows/on_release.yml
+++ b/.github/workflows/on_release.yml
@@ -13,6 +13,11 @@ jobs:
     - name: Checkout source code
       uses: actions/checkout@v1
 
+    - name: Set docker build as alias to buildx (multiarch build)
+      uses: docker/setup-buildx-action@v1
+      id: buildx
+      with:
+        install: true
 
     - name: Deploy to Docker Hub
       if: success() && startsWith(github.ref, 'refs/tags/v')
@@ -28,7 +33,7 @@ jobs:
         export LAST_KNOWN_VERSION=`git tag -l --sort=-version:refname "v*.*.*" | grep -v rc | head -n 1 | tr -d '[:space:]'`
         echo "Last known version is $LAST_KNOWN_VERSION"
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD $DOCKER_REGISTRY
-        docker build -t "docker.io/$DOCKER_IMAGE:$VERSION" -t "docker.io/$DOCKER_IMAGE:latest" --build-arg VERSION=$VERSION --build-arg VCS_REF=$GITHUB_SHA --build-arg BUILD_DATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ') .
+        docker build --platform linux/amd64,arm/v7,arm64 -t "docker.io/$DOCKER_IMAGE:$VERSION" -t "docker.io/$DOCKER_IMAGE:latest" --build-arg VERSION=$VERSION --build-arg VCS_REF=$GITHUB_SHA --build-arg BUILD_DATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ') .
         [ "$LAST_KNOWN_VERSION" == "$VERSION" ] && docker tag "docker.io/$DOCKER_IMAGE:$VERSION" "docker.io/$DOCKER_IMAGE:latest" || echo "NOT MARKING AS LATEST!"
         docker images
         docker push "docker.io/$DOCKER_IMAGE:$VERSION"
