--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
-BACKEND_URL=https://grafolean.com/api
+BACKEND_URL=https://app.grafolean.com/api
 BOT_TOKEN=
 JOBS_REFRESH_INTERVAL=120
 DB_DIR=
+# only matters if database is not started via docker-compose:
 DB_HOST=
 DB_DATABASE=
 DB_USERNAME=
