--- a/.github/workflows/on_release.yml
+++ b/.github/workflows/on_release.yml
@@ -24,7 +24,7 @@ jobs:
       with:
         install: false
 
-    - name: Deploy to Docker Hub - ARMv7
+    - name: Deploy to Docker Hub - multiplatform
       if: success() && startsWith(github.ref, 'refs/tags/v')
       env:
         GITHUB_REF_TAG: ${{ github.ref }}
